--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -14,41 +14,52 @@
     }
    ],
    "source": [
-    "print(os.environ['HOME'])\n"
+    "print(os.environ['HOME'])   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin:/app/code-server/lib/vscode/bin/remote-cli:/command:/usr/local/spark/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.environ['PATH'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/avnish/census_consumer_project/census_consumer_complaint/airflow\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(os.environ['AIRFLOW_HOME'])"
+    "import os\n",
+    "os.chdir(os.environ['AIRFLOW_HOME'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/avnish/census_consumer_project/census_consumer_complaint/airflow\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2490086425.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    where python\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "print(os.environ['AIRFLOW_HOME'])"
+    "airflow"
    ]
   }
  ],
